# gsoc2025-triplestores

./: .gitignore  README.md  alternatives.md
apache_jena_fuseki_demo/: Cleaned_AdministrativeArea_domain_stats.csv
bench/: allegrograph.py  allegrograph_init.sh  benchmarks.py  blazegraph.py  blazegraph_run.py  graphDB.py  graphDB_run.py  init_allegrograph_repo.sh  jena.py  jena_run.bat  kuzuDB.py  milleniumDB.py  oxigraph.py  ruff.toml  skeleton.py
data/generate/: README.md  generate-data.py  reasoning.ttl  ruff.toml  schema.ttl
demo/blazegraph/: README.md  blazegraph_demo.py
demo/graphdb/: README.md
demo/jena/: README.md  apachejena_fuseki_demo.py  example.ttl
demo/kuzudb/: KuzuDBdemo.py  README.md
demo/milleniumdb/: README.md
docs/: BENCHMARKING.md
graphdb_demo/: graphdb_demo.py
triplestore/: README.md  pyproject.toml  run.sh
triplestore/bench/: allegrograph.py  blazegraph.py  graphDB.py  jena.py  oxigraph.py
triplestore/demo/: README.md  allegrograph.py  blazegraph.py  demo.py  graphdb.py  jena.py  oxigraph.py
triplestore/docs/: BENCHMARKING.md  GSoC.md  HOWTO.md  REFERENCE.md
triplestore/src/triplestore/: README.md  __init__.py  base.py  core.py  exceptions.py  main.py  network_utils.py  registration.py  triplestore.py  utils.py
triplestore/src/triplestore/backends/: __init__.py  allegrograph.py  blazegraph.py  graphdb.py  jena.py  jena_utils.py  millenniumdb.py  oxigraph.py
triplestore/tests/: README.md  network_utils.py  test_all_backends.py  test_allegrograph.py  test_blazegraph.py  test_graphdb.py  test_jena.py  test_millenniumdb.py  test_oxigraph.py
