[project]
name = "triplestore"
version = "0.1.0"
description = "A unified abstraction layer for interacting with multiple RDF triplestore backends."
readme = "README.md"
authors = [
    { name = "Alexios Zavras (zvr)", email = "zvr+git@zvr.gr" },
    { name = "Maira Papadopoulou", email = "" },
]

requires-python = ">=3.10"

dependencies = [
    "psutil>=7.0.0",
    "pyoxigraph>=0.4.11",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
allegrograph = ["requests>=2.32.4"]

blazegraph = ["requests>=2.32.4"]

graphdb = ["requests>=2.32.4"]

jena =[
    "psutil>=7.0.0",
    "requests>=2.32.4"
]

oxigraph = ["pyoxigraph>=0.4.11"]

all = [
    "psutil>=7.0.0",
    "pyoxigraph>=0.4.11",
    "requests>=2.32.4",
]

dev = [
    "pytest",
    "ruff",
    "mypy",
    "build"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
